actuator-homework/clustering/prometheus_yamls/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus
  ports:
    - name: promui
      nodePort: 30040
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
