actuator-homework/clustering/prometheus_yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-prometheus-ingress
spec:
  rules:
    - host: app.library.prometheus.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
